# Chess

./: .gitignore  CMakeLists.txt  README.md
src/Application/: Application.cpp  Application.h  ChessPanel.cpp  Main.cpp
src/Chess/: Board.cpp  Board.h  Game.cpp  Game.h
src/Engine/: Engine.cpp  Engine.h
src/Graphics/: Texture.cpp  Texture.h
src/Utility/: StringParser.h
tests/: pgn_test.cpp
